# autonomous-mobile-robot-ros2-PJBL-4-24

./: LICENSE  PROGRESS.md  README.md
docs/: 00_WORKSPACE_ARCHITECTURE.md  01_USER_MANUAL.md  02_DEVELOPMENT_GUIDE.md  03_HARDWARE_GUIDE.md  04_VISUAL_REGRESSION_GUIDE.md  05_SLAM_NAV2_GUIDE.md  06_FAILOVER_GUIDE.md  07_TROUBLESHOOTING.md  HANDOVER_4JUNI2026.md  HANDOVER_KORELASI_MATAKULIAH.md  HANDOVER_LOKALISASI_17JUNI.md  HANDOVER_REMAPPING_18JUNI.md  KALIBRASI_ODOMETRI.md  SOP_MAPPING_DAN_AUTONOMOUS.md
scripts/: 00_preflight_check.sh  01_setup_workspaces.sh  02_quick_test.sh  calibrate_wheel.py  export_cloud_3d.sh  install_deps.sh  install_rtabmap_deps.sh  setup_network.sh
src/amr_3d_mapping/config/: rtabmap_mapping.yaml
src/amr_3d_mapping/launch/: rtabmap_mapping.launch.py
src/amr_bringup/config/: rviz_3d_mapping.rviz
src/amr_bringup/launch/: amr_full.launch.py  sensors_launch.py
src/amr_controller/scripts/: odometry_publisher.py
src/amr_controller/src/: stm32_bridge.cpp
src/amr_slam/: CMakeLists.txt
src/amr_slam/behavior_trees/: navigate_to_pose_simple.xml
src/amr_slam/config/: nav2_params.yaml
src/amr_slam/scripts/: demo_drive_forward.sh  log_localization.py  reset_odom.sh
